# stl36

./: README.md  pyoxidizer.bzl  pyproject.toml
.github/workflows/: main.yml
src/: main.py
