[tool.poetry]
name = "main"
version = "0.2.0"
description = ""
authors = ["Simon Biggs <simon.biggs@radiotherapy.ai>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
nicegui = "1.3.9"
pywebview = "4.2.2"
python-multipart = "^0.0.6"
orjson = {version = "^3.8.6", markers = "platform_machine != 'i386' and platform_machine != 'i686'"} # orjson does not support 32bit
itsdangerous = "^2.1.2"
aiofiles = "^23.1.0"
pywebview = "^4.0.2"
plotly = "^5.13.0"
netifaces =  "^0.11.0"
httpx = "^0.24.1"
aiohttp = "^3.8.5"



[tool.poetry.dev-dependencies]
pyoxidizer = "*"
pre-commit = "*"
black = "22.6.0"
icecream = "^2.1.0"
autopep8 = "^1.5.7"
debugpy = "^1.3.0"
pytest-selenium = "^4.0.0"
pytest-asyncio = "^0.19.0"
pytest = "6.2.5"
isort = "^5.11.4"
docutils = "^0.19"
pandas = "^2.0.0"
secure = "^0.3.0"
webdriver-manager = "^3.8.6"
numpy = ">=1.24.0"

[tool.poetry.scripts]
ast-tool-py = "src.main:main"

[tool.isort]
multi_line_output = 3
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
